// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicLayout 🥩 base use 1`] = `
<div
  class="ant-design-pro ant-pro-basicLayout"
>
  <section
    class="ant-layout ant-layout-has-sider"
    style="min-height:100%"
  >
    <aside
      class="ant-pro-sider ant-pro-sider-layout-side ant-layout-sider ant-layout-sider-dark"
      style="overflow:hidden;flex:0 0 208px;max-width:208px;min-width:208px;width:208px"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          class="ant-pro-sider-logo"
          id="logo"
        >
          <a>
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
            />
            <h1>
              Ant Design Pro
            </h1>
          </a>
        </div>
        <div
          style="flex:1;overflow-y:auto;overflow-x:hidden"
        >
          <ul
            class="ant-menu ant-pro-sider-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
            style="width:100%"
          />
        </div>
        <div
          class="ant-pro-sider-links"
        >
          <ul
            class="ant-menu ant-pro-sider-link-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
          >
            <li
              class="ant-menu-item ant-pro-sider-collapsed-button ant-menu-item-only-child"
              role="menuitem"
              style="padding-left:16px"
            >
              <span
                aria-label="menu-fold"
                class="anticon anticon-menu-fold"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="menu-fold"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
                  />
                </svg>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </aside>
    <section
      class="ant-layout"
      style="position:relative"
    >
      <header
        class="ant-layout-header"
        style="padding:0;height:48px;line-height:48px;width:100%;z-index:9"
      >
        <div
          class="ant-pro-global-header ant-pro-global-header-layout-side"
        >
          <div
            style="flex:1"
          />
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
      />
    </section>
  </section>
</div>
`;

exports[`BasicLayout 🥩 contentStyle should change dom 1`] = `
<div
  class="ant-design-pro ant-pro-basicLayout"
>
  <section
    class="ant-layout ant-layout-has-sider"
    style="min-height:100%"
  >
    <aside
      class="ant-pro-sider ant-pro-sider-layout-side ant-layout-sider ant-layout-sider-dark"
      style="overflow:hidden;flex:0 0 208px;max-width:208px;min-width:208px;width:208px"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          class="ant-pro-sider-logo"
          id="logo"
        >
          <a>
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
            />
            <h1>
              Ant Design Pro
            </h1>
          </a>
        </div>
        <div
          style="flex:1;overflow-y:auto;overflow-x:hidden"
        >
          <ul
            class="ant-menu ant-pro-sider-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
            style="width:100%"
          />
        </div>
        <div
          class="ant-pro-sider-links"
        >
          <ul
            class="ant-menu ant-pro-sider-link-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
          >
            <li
              class="ant-menu-item ant-pro-sider-collapsed-button ant-menu-item-only-child"
              role="menuitem"
              style="padding-left:16px"
            >
              <span
                aria-label="menu-fold"
                class="anticon anticon-menu-fold"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="menu-fold"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
                  />
                </svg>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </aside>
    <section
      class="ant-layout"
      style="position:relative"
    >
      <header
        class="ant-layout-header"
        style="padding:0;height:48px;line-height:48px;width:100%;z-index:9"
      >
        <div
          class="ant-pro-global-header ant-pro-global-header-layout-side"
        >
          <div
            style="flex:1"
          />
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
        style="padding:56px"
      />
    </section>
  </section>
</div>
`;

exports[`BasicLayout 🥩 menuDataRender change date 1`] = `
<div
  class="ant-design-pro ant-pro-basicLayout screen-md"
>
  <section
    class="ant-layout ant-layout-has-sider"
    style="min-height: 100%;"
  >
    <aside
      class="ant-pro-sider ant-pro-sider-layout-side ant-layout-sider ant-layout-sider-dark"
      style="overflow: hidden; flex: 0 0 208px; max-width: 208px; min-width: 208px; width: 208px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          class="ant-pro-sider-logo"
          id="logo"
        >
          <a>
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
            />
            <h1>
              Ant Design Pro
            </h1>
          </a>
        </div>
        <div
          style="flex: 1; overflow-y: auto; overflow-x: hidden;"
        >
          <ul
            class="ant-menu ant-pro-sider-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
            style="width: 100%;"
          />
        </div>
        <div
          class="ant-pro-sider-links"
        >
          <ul
            class="ant-menu ant-pro-sider-link-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
          >
            <li
              class="ant-menu-item ant-pro-sider-collapsed-button ant-menu-item-only-child"
              role="menuitem"
              style="padding-left: 16px;"
            >
              <span
                aria-label="menu-fold"
                class="anticon anticon-menu-fold"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="menu-fold"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
                  />
                </svg>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </aside>
    <section
      class="ant-layout"
      style="position: relative;"
    >
      <header
        class="ant-layout-header"
        style="padding: 0px; height: 48px; line-height: 48px; width: 100%; z-index: 9;"
      >
        <div
          class="ant-pro-global-header ant-pro-global-header-layout-side"
        >
          <div
            style="flex: 1;"
          />
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
      />
    </section>
  </section>
</div>
`;

exports[`BasicLayout 🥩 menuDataRender change date 2`] = `
<div
  class="ant-design-pro ant-pro-basicLayout screen-md"
>
  <section
    class="ant-layout ant-layout-has-sider"
    style="min-height: 100%;"
  >
    <aside
      class="ant-pro-sider ant-pro-sider-layout-side ant-layout-sider ant-layout-sider-dark"
      style="overflow: hidden; flex: 0 0 208px; max-width: 208px; min-width: 208px; width: 208px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          class="ant-pro-sider-logo"
          id="logo"
        >
          <a>
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
            />
            <h1>
              Ant Design Pro
            </h1>
          </a>
        </div>
        <div
          style="flex: 1; overflow-y: auto; overflow-x: hidden;"
        >
          <ul
            class="ant-menu ant-pro-sider-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
            style="width: 100%;"
          >
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                role="button"
                style="padding-left: 16px;"
              >
                <span
                  class="ant-pro-menu-item"
                >
                  首页
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
          </ul>
        </div>
        <div
          class="ant-pro-sider-links"
        >
          <ul
            class="ant-menu ant-pro-sider-link-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
          >
            <li
              class="ant-menu-item ant-pro-sider-collapsed-button ant-menu-item-only-child"
              role="menuitem"
              style="padding-left: 16px;"
            >
              <span
                aria-label="menu-fold"
                class="anticon anticon-menu-fold"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="menu-fold"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
                  />
                </svg>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </aside>
    <section
      class="ant-layout"
      style="position: relative;"
    >
      <header
        class="ant-layout-header"
        style="padding: 0px; height: 48px; line-height: 48px; width: 100%; z-index: 9;"
      >
        <div
          class="ant-pro-global-header ant-pro-global-header-layout-side"
        >
          <div
            style="flex: 1;"
          />
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
      />
    </section>
  </section>
</div>
`;

exports[`BasicLayout 🥩 support loading 1`] = `
<div
  class="ant-design-pro ant-pro-basicLayout screen-md"
>
  <section
    class="ant-layout ant-layout-has-sider"
    style="min-height: 100%;"
  >
    <aside
      class="ant-pro-sider ant-pro-sider-layout-side ant-layout-sider ant-layout-sider-dark"
      style="overflow: hidden; flex: 0 0 208px; max-width: 208px; min-width: 208px; width: 208px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          class="ant-pro-sider-logo"
          id="logo"
        >
          <a>
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
            />
            <h1>
              Ant Design Pro
            </h1>
          </a>
        </div>
        <div
          style="flex: 1; overflow-y: auto; overflow-x: hidden;"
        >
          <ul
            class="ant-menu ant-pro-sider-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
            style="width: 100%;"
          />
        </div>
        <div
          class="ant-pro-sider-links"
        >
          <ul
            class="ant-menu ant-pro-sider-link-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
          >
            <li
              class="ant-menu-item ant-pro-sider-collapsed-button ant-menu-item-only-child"
              role="menuitem"
              style="padding-left: 16px;"
            >
              <span
                aria-label="menu-fold"
                class="anticon anticon-menu-fold"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="menu-fold"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
                  />
                </svg>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </aside>
    <section
      class="ant-layout"
      style="position: relative;"
    >
      <header
        class="ant-layout-header"
        style="padding: 0px; height: 48px; line-height: 48px; width: 100%; z-index: 9;"
      >
        <div
          class="ant-pro-global-header ant-pro-global-header-layout-side"
        >
          <div
            style="flex: 1;"
          />
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
      >
        <div
          style="padding-top: 100px; text-align: center;"
        >
          <div
            class="ant-spin ant-spin-lg ant-spin-spinning"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
      </main>
    </section>
  </section>
</div>
`;

exports[`BasicLayout 🥩 support menuDataRender 1`] = `
<div
  class="ant-design-pro ant-pro-basicLayout screen-md"
>
  <section
    class="ant-layout ant-layout-has-sider"
    style="min-height: 100%;"
  >
    <aside
      class="ant-pro-sider ant-pro-sider-layout-side ant-layout-sider ant-layout-sider-dark"
      style="overflow: hidden; flex: 0 0 208px; max-width: 208px; min-width: 208px; width: 208px;"
    >
      <div
        class="ant-layout-sider-children"
      >
        <div
          class="ant-pro-sider-logo"
          id="logo"
        >
          <a>
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/antfincdn/PmY%24TNNDBI/logo.svg"
            />
            <h1>
              Ant Design Pro
            </h1>
          </a>
        </div>
        <div
          style="flex: 1; overflow-y: auto; overflow-x: hidden;"
        >
          <ul
            class="ant-menu ant-pro-sider-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
            style="width: 100%;"
          >
            <li
              class="ant-menu-item ant-menu-item-only-child"
              role="menuitem"
              style="padding-left: 16px;"
            >
              <span
                class="ant-pro-menu-item"
              >
                <span
                  class="ant-pro-menu-item-title"
                >
                  首页
                </span>
              </span>
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              role="menuitem"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                role="button"
                style="padding-left: 16px;"
              >
                <span
                  class="ant-pro-menu-item"
                >
                  汇总数据
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
              <div />
            </li>
            <li
              class="ant-menu-item ant-menu-item-only-child"
              role="menuitem"
              style="padding-left: 16px;"
            >
              <span
                class="ant-pro-menu-item"
              >
                <span
                  class="ant-pro-menu-item-title"
                >
                  明细数据
                </span>
              </span>
            </li>
            <li
              class="ant-menu-item ant-menu-item-only-child"
              role="menuitem"
              style="padding-left: 16px;"
            >
              <span
                class="ant-pro-menu-item"
              >
                <span
                  class="ant-pro-menu-item-title"
                >
                  其他
                </span>
              </span>
            </li>
          </ul>
        </div>
        <div
          class="ant-pro-sider-links"
        >
          <ul
            class="ant-menu ant-pro-sider-link-menu ant-menu-dark ant-menu-root ant-menu-inline"
            role="menu"
          >
            <li
              class="ant-menu-item ant-pro-sider-collapsed-button ant-menu-item-only-child"
              role="menuitem"
              style="padding-left: 16px;"
            >
              <span
                aria-label="menu-fold"
                class="anticon anticon-menu-fold"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="menu-fold"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
                  />
                </svg>
              </span>
            </li>
          </ul>
        </div>
      </div>
    </aside>
    <section
      class="ant-layout"
      style="position: relative;"
    >
      <header
        class="ant-layout-header"
        style="padding: 0px; height: 48px; line-height: 48px; width: 100%; z-index: 9;"
      >
        <div
          class="ant-pro-global-header ant-pro-global-header-layout-side"
        >
          <div
            style="flex: 1;"
          />
        </div>
      </header>
      <main
        class="ant-layout-content ant-pro-basicLayout-content ant-pro-basicLayout-has-header"
      />
    </section>
  </section>
</div>
`;
